# chatgpt-cli

./: .chatgpt-cli.yaml.sample  .envrc.sample  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
nodejs-client/: package.json  synthesize.mjs  transcribe.mjs
src/: ask.rs  credential.rs  main.rs
