[package]
name = "chatgpt-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.16"
serde = { version = "^1.0.159", features = ["derive"] }
serde_json = "^1.0.41"
whoami = "1.4.0"
ansi_term = "0.12.1"
